a simple test file is added of sea programming language

--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -1,5 +1,5 @@
 run: ./main.c ./vm.c ./compiler.c ./scanner.c utils/int_array.c utils/value_array.c ./table.c ./object.c
-	cc -o main -g ./main.c ./vm.c ./compiler.c ./scanner.c utils/int_array.c utils/value_array.c ./table.c ./object.c; ./main
+	cc -o main -g ./main.c ./vm.c ./compiler.c ./scanner.c utils/int_array.c utils/value_array.c ./table.c ./object.c; ./main ./test1.sea
 	
 clean:
 	rm -f main *.o
